[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-chat-exporter"
version = "0.1.3"
description = "Export local Codex session JSONL files to readable Markdown."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Local" }]
dependencies = []

[project.scripts]
codex-chat-export = "codex_chat_exporter.cli:main"
extract-codex-chat = "codex_chat_exporter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
